@@ -1,4 +1,4 @@
-.\" $Header: /data/zender/nco_20150216/nco/man/ncwa.1,v 1.22 2012-09-02 20:06:20 zender Exp $ -*-nroff-*-
+.\" $Header: /data/zender/nco_20150216/nco/man/ncwa.1,v 1.23 2013-07-24 15:04:07 zender Exp $ -*-nroff-*-
 .\" Purpose: ROFF man page for ncwa
 .\" Usage:
 .\" nroff -man ~/nco/man/ncwa.1 | less
@@ -17,7 +17,10 @@ ncwa [\-3] [\-4] [\-6] [\-A] [\-a
 .IR dim ,[
 .IR min ][,[
 .IR max ]]]
-[\-F]
+[\-F] [\-G
+.IR gpe_dsc ]
+[\-g  
+.IR grp [,...]]
 [\-h] [\-\-hdr_pad
 .IR sz ]
 [\-I] [\-L 
@@ -35,7 +38,7 @@ ncwa [\-3] [\-4] [\-6] [\-A] [\-a
 .IR mask_comp ]
 [\-t
 .IR thr_nbr ]
-[\-v 
+[\--unn] [\-v 
 .IR var [,...]]
 [\-w 
 .IR weight ]
@@ -191,7 +194,7 @@ The mathematical definition of operations involving rank reduction
 is given above.
 
 .\" NB: Append man_end.txt here
-.\" $Header: /data/zender/nco_20150216/nco/man/ncwa.1,v 1.22 2012-09-02 20:06:20 zender Exp $ -*-nroff-*-
+.\" $Header: /data/zender/nco_20150216/nco/man/ncwa.1,v 1.23 2013-07-24 15:04:07 zender Exp $ -*-nroff-*-
 .\" Purpose: Trailer file for common ending to NCO man pages
 .\" Usage: 
 .\" Append this file to end of NCO man pages immediately after marker
